--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <h2>Новости</h2>
       <h5>Фото новостей:</h5>
       <div class="foto-img" style="height:250px;">
-        <img src="/img/foto-left1.jpg" alt="Nature" class="responsive">
+        <img src="img/foto-left1.jpg" alt="Nature" class="responsive">
       </div>
       <p>Текст о новости...Текст о новости...Текст о новости...</p>
       <h3>Больше новостей</h3>
