--- a/index.html
+++ b/index.html
@@ -35,26 +35,26 @@
       <h2>Новости</h2>
       <h5>Фото новостей:</h5>
       <div class="foto-img" style="height:250px;">
-        <img src="/img/foto-left1.jpg" alt="Nature" class="responsive">
+        <img src="img/foto-left1.jpg" alt="Nature" class="responsive">
       </div>
       <p>Текст о новости...Текст о новости...Текст о новости...</p>
       <h3>Больше новостей</h3>
       <p>Дргуие новости на этом сайте.</p>
       <div class="foto-img" style="height:250px;">
-        <img src="/img/foto-left2.jpg" alt="Nature" class="responsive">  
+        <img src="img/foto-left2.jpg" alt="Nature" class="responsive">  
       </div><br>
       <div class="foto-img" style="height:250px;">
-        <img src="/img/foto-left3.jpg" alt="Nature" class="responsive"> 
+        <img src="img/foto-left3.jpg" alt="Nature" class="responsive"> 
       </div><br>
       <div class="foto-img" style="height:250px;">
-        <img src="/img/foto-left4.jpg" alt="Nature" class="responsive">
+        <img src="img/foto-left4.jpg" alt="Nature" class="responsive">
       </div>
     </div>
     <div class="main">
       <h2>НАЗВАНИЕ СОБЫТИЯ</h2>
       <h5>Событие, Число.Месяц.Год.</h5>
       <div class="foto-img" style="height:300px;">
-        <img src="/img/foto-right1.jpg" alt="Nature" class="responsive">  
+        <img src="img/foto-right1.jpg" alt="Nature" class="responsive">  
       </div>
       <p>Какой-то текст...</p>
       <p>Текст о событии... Текст о событии... Текст о событии... Текст о событии... Текст о событии... Текст о событии... Текст о событии... Текст о событии... Текст о событии... Текст о событии... Текст о событии... </p>
@@ -62,7 +62,7 @@
       <h2>НАЗВАНИЕ СОБЫТИЯ</h2>
       <h5>Событие, Число.Месяц.Год.</h5>
       <div class="foto-img" style="height:300px;">
-        <img src="/img/foto-right2.jpg" alt="Nature" class="responsive"> 
+        <img src="img/foto-right2.jpg" alt="Nature" class="responsive"> 
       </div>
       <p>Какой-то текст...</p>
       <p>Текст о событии... Текст о событии... Текст о событии... Текст о событии... Текст о событии... Текст о событии... Текст о событии... Текст о событии... Текст о событии... Текст о событии... Текст о событии... </p>
